# explicatio

./: .gitignore  README.md  build.sh  old_setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
Explicatio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.html  package-lock.json
docs/pandocs/: build.sh  index.md  man.md
docs/sphinx/source/: conf.py  index.rst
explicatio/: __init__.py  config.ini  version.py
