[metadata]
name = Explicatio
version = attr: explicatio.__version__
author = Bryan Smith
author_email = bryanabsmith@gmail.com
description = A simple analysis tool for text.
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/bryan-ab-smith/explicatio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
include_package_data = True
packages =
    find:
install_requires=
    colored
    halo
    matplotlib
    nltk
    textract
    torch
    transformers
scripts =
    bin/explicatio

[options.package_data]
* = *.ini